tests/fixtures/TypeConversionFunctionTests/errors/decimal_no_argument.fg
/; EXPECT_ERROR: FunctionArgumentCountMismatch
print(Decimal())

